--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <title>Pong</title>
     <script type="text/javascript" src="lib/p5.min.js"></script>
     <script type="text/javascript" src="draw.js"></script>
+    <link rel="stylesheet" href="main.css">
   </head>
+  <h1> Pong! </h1>
+  <div id="canvasContainer"></div>
   <body>
 
   </body>
