--- a/client/index.html
+++ b/client/index.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <title>Pong</title>
+    <script src = "https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.0/socket.io.dev.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="lib/p5.min.js"></script>
     <script type="text/javascript" src="draw.js"></script>
     <link rel="stylesheet" href="main.css">
   </head>
   <h1> Pong! </h1>
+  <script src = "draw.js"></script>
+  
   <div id="canvasContainer"></div>
   <body>
 
